flux/manifests/pastebin/pastebin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pastebin-svc
  namespace: pastebin
spec:
  selector:
    app: pastebin
  type: ClusterIP
  ports:
  - name: pastebin
    protocol: TCP
    port: 8000
    targetPort: 8000
