flux/manifests/pastebin/pastebin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastebin-ingress
  namespace: pastebin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - paste.macks.cloud
    secretName: pastebin-tls
  rules:
  - host: paste.macks.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pastebin-svc
            port:
              number: 8000
